switched kubejs event to use new system for collisions